CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TeNetMgr) 

#INCLUDE(../../../Server/CMakeComm.txt)

SET( INCLUDE_PATH
	${PROJECT_SOURCE_DIR}/
	${PROJECT_SOURCE_DIR}/Enet/include
    )

INCLUDE_DIRECTORIES( ${INCLUDE_PATH} )

AUX_SOURCE_DIRECTORY(./ LIB_SRC)
AUX_SOURCE_DIRECTORY(./C++Sockets LIB_SRC)
AUX_SOURCE_DIRECTORY(./Enet LIB_SRC)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../../../../Share/lib/linux)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set(CMAKE_BUILD_TYPE Release CACHE STRING "set build type to debug")

ADD_DEFINITIONS(-D__LINUX__ -Wno-deprecated -std=c++11)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${LIB_SRC})

INSTALL( TARGETS ${PROJECT_NAME}
         ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/../../../Share/lib/linux
        )
